# celkit

./: Cargo.toml  README.md
cel/: Cargo.toml
cel/src/: lib.rs
cel_core/: Cargo.toml
cel_core/src/: impls.rs
celkit/: Cargo.toml
celkit/src/: lib.rs
celkit_binary/: Cargo.toml
celkit_core/: Cargo.toml
celkit_core/src/: core.rs  impls.rs  lib.rs  utils.rs
celkit_derive/: Cargo.toml
celkit_derive/src/: attributes.rs  lib.rs  utils.rs
celkit_derive/src/deserialize/: enums.rs  fields.rs  mod.rs  structs.rs
celkit_derive/src/serialize/: enums.rs  fields.rs  mod.rs  structs.rs
celkit_string/: Cargo.toml
celkit_string/src/: common.rs  decode.rs  encode.rs  lib.rs
src/: core.rs  impls.rs  lib.rs
