[package]
name = "celkit"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["std"]
std = [
  "celkit-core/std",
  "celkit-string?/std",
]
string = ["celkit-string"]

[dependencies]
celkit-core = { path = "../celkit_core/" }
celkit-string = { path = "../celkit_string/", optional = true }
